--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin bg-hover($bg, $bg-hover){
   background-color: $bg;
-  &:hover{
+  &:hover, &:focus{
     background-color: $bg-hover;
   }
 }
